# kitabguru-inference

./: .env.example  .gitignore  Dockerfile  README.md  playground_streamlit.py  pyproject.toml
.github/workflows/: main.yml
app/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/api/: __init__.py  chat.py  documents.py
app/providers/: __init__.py  embeddings.py  llm.py
app/services/: __init__.py  chroma_store.py  epub_ingestion.py  qdrant_store.py  retrieval.py
docs/: retrieval_architecture.md
tests/: test_chat_api.py  test_document_import_metadata.py  test_embeddings.py  test_epub_ingestion.py  test_llm_router.py  test_retrieval.py  test_stale_embeddings.py
